--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,7 @@
-version: "3.3"
+version: "3"
 services:
   ndless-dev:
-    build:
-      context: .
+    build: .
     volumes:
-      - type: bind
-        source: ./src
-        target: /calc/src
+      - ./src:/calc/src
     tty: true
